--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 
 * Codebreaker Solutions
 A giant repository of solutions for the competitive programming website,
-[[https://codebreaker.xyz/][Codebreaker]], made by me and a few students from HCI EC3.
+[[https://codebreaker.xyz/][Codebreaker]], collected by me and a few students from HCI EC3.
 
 ** Contributors
-- [[https://github.com/g-e-o-m-e-t-r-i-c/][g-e-o-m-e-t-r-i-c]]
++ [[https://github.com/g-e-o-m-e-t-r-i-c/][g-e-o-m-e-t-r-i-c]]
