--- a/README.org
+++ b/README.org
@@ -2,8 +2,8 @@
 #+AUTHOR: g-e-o-m-e-t-r-i-c
 
 * Codebreaker Solutions
-A giant repository of solutions for the competitive programming website,
-[[https://codebreaker.xyz/][Codebreaker]], collected by me and a few students from HCI EC3.
+A giant repository of /solutions/ for the competitive programming website,
+[[https://codebreaker.xyz/][Codebreaker]], collected by *me* and a few students from HCI EC3.
 
 ** Makefile Things
 There is a =Makefile= in the =./solutions= directory.
